# Phantom

./: .gitattributes  README.md
cpp/: .gitignore  CMakeLists.txt  Phantom.hpp  auto_diff.cpp  dll.cpp  main.cpp
cpp/src/: Phantom.hpp  PhantomControlLaws.hpp  PhantomController.hpp  PhantomGui.hpp  PhantomHardware.hpp  PhantomInterface.hpp  PhantomModel.cpp  PhantomModel.hpp  PhantomSimulation.hpp  PhantomUtility.hpp  control.cpp  dll.cpp  phantom_control.cpp  phantom_plugin.cpp  phantom_tasbi_force_check.cpp  phantom_tasbi_plugin.cpp
matlab/: butter_synth.m  cavusoglu.m  compute_energies.m  dh2tf.m  dynamics.asv  dynamics.m  dynamics_lagrangian.m  forward_kinematics.m  generate_code.m  h_analysis.m  inverse_kinematics.m  jacobian.m  parse_sw_mp.m  phantom_fk.m  phantom_jacobian.m  skewexp.m  sw_mp_a.txt  sw_mp_be.txt  sw_mp_c.txt  sw_mp_df.txt  sw_mp_g.txt
misc/: barcode.psd  logo.psd  patent.psd  serial.psd
solidworks/: avago_hedl554x_encoder.SLDASM  avago_hedl554x_main.SLDPRT  avago_hedl554x_plate.SLDPRT  axel_large.SLDPRT  axel_medium.SLDPRT  axel_small.SLDPRT  base.SLDPRT  bumper.SLDPRT  capstan1.SLDPRT  capstan2.SLDPRT  collar.SLDPRT  cover.SLDPRT  hook.SLDPRT  link1a.SLDPRT  link1b.SLDPRT  link2.SLDPRT  link3.SLDPRT  maxon_re25.SLDPRT  mount1.SLDPRT  mount2.SLDPRT  mount3.SLDPRT  phantom1.5.SLDASM  phantom_1.5.SLDASM  shaft1.SLDPRT  spool1.SLDPRT  spool23.SLDPRT  t_block.SLDPRT  tensioner.SLDPRT  u_frame.SLDPRT  ~$shaft1.SLDPRT
solidworks/hardware/: 170-009-273.step.SLDPRT  171-009-203.SLDPRT  171-015-103.SLDPRT  4262T320_PRECISION FLANGED BALL BEARING.SLDPRT  57155K322_STAINLESS STEEL BALL BEARING.SLDPRT  5905K260_STEEL NEEDLE-ROLLER BEARING.SLDPRT  90128A112_ZNC-PLTD ALLOY STL SCKT HEAD CAP SCREW.SLDPRT  91075A460_18-8 SS MALE-FEM THRDED HEX STANDOFF.SLDPRT  91251A128_BLACK-OXIDE ALLOY STEEL SOCKET HEAD CAP SCREW.SLDPRT  91251A146_BLACK-OXIDE ALLOY STEEL SOCKET HEAD CAP SCREW.SLDPRT  91251A248_BLACK-OXIDE ALLOY STEEL SOCKET HEAD SCREW.SLDPRT  91375A102_ALLOY STEEL CUP POINT SET SCREW.SLDPRT  91375A121_ALLOY STEEL CUP POINT SET SCREW.SLDPRT  91771A126_18-8 SS FLAT HEAD PHILLIPS MACHINE SCREW.SLDPRT  91772A106_18-8 SS PAN HEAD PHILLIPS MACHINE SCREW.SLDPRT  91792A115_18-8 SS PAN HEAD SLOTTED MACHINE SCREW.SLDPRT  93070A276_ALLOY STEEL LOW-PROFILE SOCKET HEAD SCREW.SLDPRT  94674A490_FLUSH-MOUNT PRESS-FIT NUT FOR SHEET METAL.SLDPRT  98410A110_EXTERNAL RETAINING RING.SLDPRT  CUI_DEVICES_SD-80SN.SLDPRT
unity/Phantom/: .gitignore  imgui.ini
unity/Phantom/Assets/: MouseOrbitImproved.cs  New Material.mat  PhantomCableCapstan.cs  PhantomCableSpool.cs  PhantomModel.cs  PhantomSimulation.cs  PointCloud.cs  Silhouette.shader  phantom.unity  ppp.asset
unity/Phantom/Assets/Phantom/: LightingData.asset  Phantom.prefab  Post.asset  phantom.unity
unity/Phantom/Assets/Phantom/ExternalFiles/: python_file.py
unity/Phantom/Assets/Phantom/Materials/: Aluminum.mat  AluminumBrushed.mat  Anodized.mat  AnodizedBrush.mat  BlackScrew.mat  Brass.mat  Bumper.mat  Desired.mat  Dsub15.mat  Dsub9.mat  FK.mat  Ghost.mat  HL_A.mat  HL_BE.mat  HL_C.mat  HL_DF.mat  HL_G.mat  HL_base.mat  Highlight.shader  Motor.mat  New Material 2.mat  New Material 3.mat  New Material.mat  Outline.mat  Plastic 1.mat  Plastic.mat  PointCloud.mat  ScreenshotCapture.cs  Silhouette.shader  Skin.mat  Steel 1.mat  Steel.mat  Target.mat  TransformMaterial.mat  Wire 1.mat  Wire.mat  Workspace.mat  patent.mat  secret.mat  serial.mat
unity/Phantom/Assets/XR/: XRGeneralSettings.asset
unity/Phantom/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+21 files in other folders)
